# python-project-83

./: .env  .gitignore  Makefile  README.md  database.sql  key.txt  key.txt.pub  pyproject.toml
.github/workflows/: file.yml
page_analyzer/: __init__.py  app.py  database.py  functions.py  html.py  validate.py
page_analyzer/templates/: basa.html  base.html  empty.html  index.html  message.html  notval.html  show_url.html  show_urls.html
tests/: conftest.py
