[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Valeria Lukovich <valeria_lukovic@mail.ru>"]
readme = "README.md"
packages = [
    { include = "page_analyzer" },
    ]


[tool.poetry.dependencies]
python = "^3.8.18"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
